monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2008/A2008c.mc4

/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2008;

grammar A2008c extends de.monticore.common.TestTypes {

    B = Name* names:Name*;
}